@@ -1,3 +1,8 @@
+2005-02-10  Dalibor Topic  <robilad@kaffe.org>
+
+	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c (jthreadedAccept): 
+	Fixed accept again for the case that select was interrupted.
+
 2005-02-08  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/scripts/compat/javac.in: Switched to use jikes
